-- The name of the package.
name:                __PROJECT-NAME__

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

-- A short (one-line) description of the package.
synopsis:            __SYNOPSIS__

-- A longer description of the package.
-- description:

-- The license under which the package is released.
-- license:

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              __USER-NAME__

-- An email address to which users can send suggestions, bug reports, and
-- patches.
maintainer:          __USER-MAIL-ADDRESS__

-- A copyright notice.
copyright:           Copyright (c) __YEAR__ __USER-NAME__

category:            __PROJECT-CATEGORY__

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a
-- README.
-- extra-source-files:

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10


executable __PROJECT-NAME__
  -- .hs or .lhs file containing the Main module.
  main-is:             Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       base >=4.6 && <4.7

  -- Directories containing source files.
  hs-source-dirs:      __PROJECT-NAME__

  -- Base language which the package is written in.
  default-language:    __HASKELL-LANGUAGE-VERSION__
